# SSSV_Recomp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  aspMain.toml  sssv.us.toml
.github/linux/: SSSVRecompiled.desktop
.github/macos/: Info.plist.in  apple_bundle.cmake  fixup_bundle.cmake
.github/workflows/: build.yml  release  release-build.yml  validate-external.yml  validate-internal.yml  validate.yml
include/: sssv_billboard_controls.h  sssv_config.h  sssv_game.h  sssv_launcher.h
lib/CellenseresSDK/: CMakeLists.txt
lib/CellenseresSDK/include/cs_sdk/: cs_sdk.h  launcher_music.h
lib/CellenseresSDK/src/: launcher_music.cpp
src/game/: config.cpp  recomp_api.cpp  sssv_billboard_rewrite.cpp  trophy_collision_patch.cpp  vi_scale_workaround.cpp
src/main/: launcher_animation.cpp  main.cpp  register_overlays.cpp  theme.cpp
